# photo-library

./: package.json  postcss.config.cjs  tailwind.config.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 20230312072649_add_photos.sql
src-tauri/src/: main.rs  metadata.rs
src-tauri/src/commands/: add_to_library.rs  mod.rs
src-tauri/src/repository/: error.rs  mod.rs  model.rs
src-tauri/src/repository/entities/: mod.rs  photo.rs  prelude.rs
src-tauri/src/repository/migrator/: m20230313_074333_create_photos.rs  mod.rs
src/api/: index.ts
src/components/: AddImagesModal.tsx  LoadingSpinner.tsx
