[package]
name = "photo-library"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.27"
glob = "0.3.1"
globwalk = "0.8.1"
num = "0.4.0"
rexiv2 = "0.10.0"
sea-orm = { version = "0.11.1", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.11.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
